css/mobile/proj1.css
/* Mobile */

@media (max-width: 820px) { 
    .project-description-container {
        display: flex;
        flex-direction: column;
        row-gap: 25px;
    }
    
    .project-name-desktop {
        display: none;
    }

    .project-name-mobile {
        display: flex;
        justify-content: center;
        flex-direction: row;
    }

    .h5-subheader {
        font-size: 25px;
        justify-content: center;
    }

    .h6-subheader {
        font-size: 20px;
        justify-content: center;
    }

    .left-side-container {
        row-gap: 75px;
    }

    .right-side-container {
        display: flex;
    }

    #butvstream-vid {
        width: 100%;
        height: auto;
    }

    .proj-1-photo-cont-1 {
        display: flex;
        flex-direction: column;
        row-gap: 12px;
    }

    .proj-1-desktop-photo-cont {
        display: flex;
        flex-direction: column;
        column-gap: 20px;
        row-gap: 20px;
    }

    .proj-1-photo-cont-2 {
        display: grid;
        grid-template-areas: "head head"
            "top-left top-right"
            "bot-left bot-right";
        row-gap: 5px;
        column-gap: 5px;
    }

    .proj-1-desktop-photo {
        width: 100%;
        height: 100%;
        border-radius: 10px;
    }

    .proj-1-mobile-photo {
        width: 100%;
        height: 700px;
    }

    .head {
        grid-area: head;
    }

    .top-left {
        grid-area: top-left;
    }

    .top-right {
        grid-area: top-right;
    }

    .bot-left {
        grid-area: bot-left;
    }

    .bot-right {
        grid-area: bot-right;
    }

    .page-content-inner-container {
        row-gap: 40px;
    }
}

@media (max-width: 425px) {
    .proj-1-mobile-photo {
        width: 100%;
        height: 360px;
    }
}

